@@ -1,6 +1,8 @@
 CVS code -
 - General:
 	- Miscellaneous comment fixes. (DLR)
+	- Remove unnecessary #ifdef around termios.h #include in nano.c.
+	  (DLR)
 
 GNU nano 1.3.10 - 2005.12.23
 - General:
